; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_display.c_icl_wa_scalerclkgating.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_display.c_icl_wa_scalerclkgating.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_private = type { i32 }

@DPFR_GATING_DIS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_i915_private*, i32, i32)* @icl_wa_scalerclkgating to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @icl_wa_scalerclkgating(%struct.drm_i915_private* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.drm_i915_private*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.drm_i915_private* %0, %struct.drm_i915_private** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %3
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @CLKGATE_DIS_PSL(i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @CLKGATE_DIS_PSL(i32 %12)
  %14 = call i32 @I915_READ(i32 %13)
  %15 = load i32, i32* @DPFR_GATING_DIS, align 4
  %16 = or i32 %14, %15
  %17 = call i32 @I915_WRITE(i32 %11, i32 %16)
  br label %28

18:                                               ; preds = %3
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @CLKGATE_DIS_PSL(i32 %19)
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @CLKGATE_DIS_PSL(i32 %21)
  %23 = call i32 @I915_READ(i32 %22)
  %24 = load i32, i32* @DPFR_GATING_DIS, align 4
  %25 = xor i32 %24, -1
  %26 = and i32 %23, %25
  %27 = call i32 @I915_WRITE(i32 %20, i32 %26)
  br label %28

28:                                               ; preds = %18, %9
  ret void
}

declare dso_local i32 @I915_WRITE(i32, i32) #1

declare dso_local i32 @CLKGATE_DIS_PSL(i32) #1

declare dso_local i32 @I915_READ(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
